--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Maksshev/servBot.git"
+  },
+  "engines": {
+    "node": "8.12.0"
   },
   "keywords": [],
   "author": "",
